--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </div>
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/question.jpg" alt="Card image cap">
+<img class="card-img-top" src="question.jpg" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">6th Project</h5>
 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
