--- a/index.html
+++ b/index.html
@@ -81,39 +81,39 @@
          </div>
       <div class="col-sm-3">
        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="IMAGES/SPIKER8.jpg" alt="Card image cap">
+            <img class="card-img-top" src="IMAGES/SPIKER8.jpg" height="280px;" alt="Card image cap">
              <div class="card-body">
               <h5 class="card-title text-center">1st Project</h5>
              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             <a href="#" class="btn btn-primary">Go somewhere</a>
+             <a href="#" class="btn btn-primary">GREAT JOB!</a>
            </div>
        </div>
 </div>
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/question.jpg" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/phY9.gif" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">2nd Project</h5>
-<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">Go somewhere</a>
+<p class="card-text">Snakes are one of the endangered species in the world, so when you see one don't kill it.</p>
+<a href="#" class="btn btn-primary">GREAT JOB!</a>
 </div>
 </div>
 </div>
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/question.jpg" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/home.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">3rd Project</h5>
 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">Go somewhere</a>
+<a href="#" class="btn btn-primary">GREAR JOB!</a>
 </div>
 </div>
 </div>
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/question.jpg" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/legends_logo.png" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">4th Project</h5>
 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -126,43 +126,43 @@
      <div class="row">
     <div class="col-sm-3">
      <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="IMAGES/question.jpg" alt="Card image cap">
+          <img class="card-img-top" src="IMAGES/rhino.jpg" height="280px;" alt="Card image cap">
            <div class="card-body">
             <h5 class="card-title text-center">5th Project</h5>
            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-           <a href="#" class="btn btn-primary">Go somewhere</a>
+           <a href="#" class="btn btn-primary">GREAT JOB</a>
          </div>
      </div>
 </div>
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/question.jpg" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/jaguar_black.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">6th Project</h5>
 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">Go somewhere</a>
+<a href="#" class="btn btn-primary">GREAT JOB</a>
 </div>
 </div>
 </div>
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/question.jpg" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/buggatti.png" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">7th Project</h5>
 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">Go somewhere</a>
+<a href="#" class="btn btn-primary">GREAT JOB!</a>
 </div>
 </div>
 </div>
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/question.jpg" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/CR7_boss.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">8th Project</h5>
 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">Go somewhere</a>
+<a href="#" class="btn btn-primary">GREAT JOB!</a>
 </div>
 </div>
 </div>
@@ -224,27 +224,6 @@
   <div class="panel-body text-center"><u><p>Copyrights Reserved@Jabulani2019</p></u></div>
 </div>
 </div>
-<script>
-  $("#nav ul li a[href^='#']").on('click', function(e) {
-
-     // prevent default anchor click behavior
-     e.preventDefault();
-
-     // store hash
-     var hash = this.hash;
-
-     // animate
-     $('html, body').animate({
-         scrollTop: $(hash).offset().top
-       }, 4000, function(){
-
-         // when done, add hash to url
-         // (default click behaviour)
-         window.location.hash = hash;
-       });
-
-  });
-</script>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
