--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/phY9.gif" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/PhY9.gif" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">2nd Project</h5>
 <p class="card-text">Snakes are one of the endangered species in the world, so when you see one don't kill it.</p>
