--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <nav class="navbar   bg-secondary fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand text-light" href="#">HOME</a>
-          <a class="navbar-brand text-light" href="#services">SERVICES yaka</a>
+          <a class="navbar-brand text-light" href="#services">SERVICES</a>
           <a class="navbar-brand text-light" href="#projects">PROJECTS</a>
           <a class="navbar-brand text-light" href="#contact">CONTACT</a>
         </div>
