--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <img class="card-img-top" src="IMAGES/SPIKER8.jpg" height="280px;" alt="Card image cap">
              <div class="card-body">
               <h5 class="card-title text-center">1st Project</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             <a href="#" class="btn btn-primary">GREAT JOB!</a>
+             <p class="card-text">Creating my portfolio with all my infomation in a form of a website that will be live.</p>
+             <a href="#" class="btn btn-primary">LIKE</a>
            </div>
        </div>
 </div>
@@ -95,7 +95,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">2nd Project</h5>
 <p class="card-text">Snakes are one of the endangered species in the world, so when you see one don't kill it.</p>
-<a href="#" class="btn btn-primary">GREAT JOB!</a>
+<a href="#" class="btn btn-primary">LIKE</a>
 </div>
 </div>
 </div>
@@ -105,8 +105,8 @@
 <img class="card-img-top" src="IMAGES/home.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">3rd Project</h5>
-<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">GREAR JOB!</a>
+<p class="card-text">Investing in property will bring great returns because it's value rises the moment you buy it.</p>
+<a href="#" class="btn btn-primary">LIKE!</a>
 </div>
 </div>
 </div>
@@ -116,8 +116,8 @@
 <img class="card-img-top" src="IMAGES/legends_logo.png" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">4th Project</h5>
-<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary text-center">GREAT JOB!</a>
+<p class="card-text">Revamping and designing THE LEGENDARY BARBER logo to hook more customers.</p>
+<a href="#" class="btn btn-primary text-center">LIKE</a>
 </div>
 </div>
 </div>
@@ -129,8 +129,8 @@
           <img class="card-img-top" src="IMAGES/rhino.jpg" height="280px;" alt="Card image cap">
            <div class="card-body">
             <h5 class="card-title text-center">5th Project</h5>
-           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-           <a href="#" class="btn btn-primary">GREAT JOB</a>
+           <p class="card-text">Creating awareness for another one of the endangered species in South Africa.</p>
+           <a href="#" class="btn btn-primary">LIKE</a>
          </div>
      </div>
 </div>
@@ -139,8 +139,8 @@
 <img class="card-img-top" src="IMAGES/jaguar_black.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">6th Project</h5>
-<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">GREAT JOB</a>
+<p class="card-text">A whole new world as we tap deeper in to the way Jaguars behave in their natural habitat.</p>
+<a href="#" class="btn btn-primary">LIKE</a>
 </div>
 </div>
 </div>
@@ -150,8 +150,8 @@
 <img class="card-img-top" src="IMAGES/buggatti.png" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">7th Project</h5>
-<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">GREAT JOB!</a>
+<p class="card-text">Style and performance of luxury cars that are affordable and can be maintained without hassles.</p>
+<a href="#" class="btn btn-primary">LIKE</a>
 </div>
 </div>
 </div>
@@ -161,8 +161,8 @@
 <img class="card-img-top" src="IMAGES/CR7_boss.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">8th Project</h5>
-<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<a href="#" class="btn btn-primary">GREAT JOB!</a>
+<p class="card-text">Looking at how Cristiano Ronaldo manages to be at the top of his game most of the time.</p>
+<a href="#" class="btn btn-primary">LIKE</a>
 </div>
 </div>
 </div>
