--- a/index.html
+++ b/index.html
@@ -71,6 +71,31 @@
 
 
 </div>
+     
+     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+  <div class="carousel-item active">
+  <img src="IMAGES/motiv1.jpg" height="700px;" width="1024px;" class="d-block w-100" >
+  </div>
+<div class="carousel-item">
+<img src="IMAGES/motiv2.jpg" height="700px;" width="1024px;" class="d-block w-100" >
+</div>
+<div class="carousel-item">
+<img src="IMAGES/motiv3.JPG" height="700px;" width="1024px;" class="d-block w-100" >
+</div>
+<div class="carousel-item">
+<img src="IMAGES/motiv4.jpg" height="700px;" width="1024px;" class="d-block w-100" >
+</div>
+</div>
+<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+<span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+<span class="carousel-control-next-icon" aria-hidden="true"></span>
+<span class="sr-only">Next</span>
+</a>
+</div>
    </section>
    <hr>
    <section id="projects">
