--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 <div class="carousel-inner">
   <div class="carousel-item active">
-  <img src="IMAGES/motiv1.jpg" height="700px;" width="1024px;" class="d-block w-100" >
+  <img src="motiv1.jpg" height="700px;" width="1024px;" class="d-block w-100" >
   </div>
 <div class="carousel-item">
 <img src="IMAGES/motiv2.jpg" height="700px;" width="1024px;" class="d-block w-100" >
