--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
   <img src="motiv1.jpg" height="700px;" width="1024px;" class="d-block w-100" >
   </div>
 <div class="carousel-item">
-<img src="IMAGES/motiv2.jpg" height="700px;" width="1024px;" class="d-block w-100" >
+<img src="motiv2.jpg" height="700px;" width="1024px;" class="d-block w-100" >
 </div>
 <div class="carousel-item">
-<img src="IMAGES/motiv3.JPG" height="700px;" width="1024px;" class="d-block w-100" >
+<img src="motiv3.JPG" height="700px;" width="1024px;" class="d-block w-100" >
 </div>
 <div class="carousel-item">
-<img src="IMAGES/motiv4.jpg" height="700px;" width="1024px;" class="d-block w-100" >
+<img src="motiv4.jpg" height="700px;" width="1024px;" class="d-block w-100" >
 </div>
 </div>
 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
