--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 
     </main>
-    <div class="container border border-dark">
+    <div class="container bg-light border border-dark">
 
 <div class="panel panel-default">
   <div class="panel-body text-center"><u><p>Copyrights Reserved@Jabulani2019</p></u></div>
