--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            <div class="col-sm-10">
              <h1 class="display-1 text-light">Jabulani Msibi</h1>
              <hr>
-             <p class="text-light font-weight-bold">A Student at Quirky 30.</p>
+             <marquee><p class="text-light font-weight-bold">A Student at Quirky 30.</p></marquee>
              <button type="button" class="btn btn-sm bg-primary text-white"><i class="fab fa-facebook-f"></i>Jabulani Thomas Msibi</button>
              <button type="button" class="btn btn-sm bg-info text-white"><i class="fab fa-whatsapp"></i>0611015204</button>
            </div>
