--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container-fluid d-flex justify-content-center align-items-center h-100">
         <div class="row d-flex justify-content-center text-center">
            <div class="col-sm-10">
-             <h1 class="display-1 text-light">Jabulani Msibi</h1>
+             <h1 class="display-1 display-1 text-light">Jabulani Msibi</h1>
              <hr>
              <marquee><p class="text-light font-weight-bold">A Student at Quirky 30.</p></marquee>
              <button type="button" class="btn btn-sm bg-primary text-white"><i class="fab fa-facebook-f"></i>Jabulani Thomas Msibi</button>
