--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/index.css">
     <title>My Portfolio</title>
   </head>
   <body>
-    <!-- My main Navigation-->
+    <!-- My main Navigation -->
     <header>
-     <nav class="navbar   bg-secondary fixed-top">
+     <nav class="navbar  bg-secondary fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand text-light" href="#">HOME</a>
           <a class="navbar-brand text-light" href="#services">SERVICES</a>
@@ -25,9 +23,9 @@
       <div class="container-fluid d-flex justify-content-center align-items-center h-100">
         <div class="row d-flex justify-content-center text-center">
            <div class="col-sm-10">
-             <h1 class="display-1 display-1 text-light">Jabulani Msibi</h1>
+             <h1 class="display-1 text-light">Jabulani Msibi</h1>
              <hr>
-             <marquee><p class="text-light font-weight-bold">A Student at Quirky 30.</p></marquee>
+               <p class="text-light font-weight-bold">A Student at Quirky 30.</p>
              <button type="button" class="btn btn-sm bg-primary text-white"><i class="fab fa-facebook-f"></i>Jabulani Thomas Msibi</button>
              <button type="button" class="btn btn-sm bg-info text-white"><i class="fab fa-whatsapp"></i>0611015204</button>
            </div>
@@ -35,75 +33,42 @@
 </div>
 </div>
 
-
     </header>
     <!-- Main Layout -->
     <main>
       <hr>
    <section id="services">
      <div class="container-fluid">
-       <div class="row">
-         <div class="col-sm-12  text-center">
-           <u class="text-info"><h1 class="text-info">SERVICES</h1></u>
-           <div class="col-sm-12  text-center">
-             <h3>About me</h3>
-           <p>I'm a young energetic guy who wants to make it in life!</p>
-         </div>
-         </div>
-           <div class="row">
-              <div class="col-sm-4 text-center">
-                <i class="fas fa-desktop" style="font-size: 60px;"></i>
-                <h4>Web development</h4>
+       <div class="row ">
+           <div class="row bg-dark text-white">
+             <div class="col-sm-12  text-center">
+                <h3>About me</h3>
+                <p>I'm a young energetic guy who wants to make it in life!</p>
+            </div>
+             <div class="col-sm-4 text-center">
+                <i class="fas fa-desktop text-info" style="font-size: 60px;"></i>
+                 <h4>Web Development</h4>
                 <p>I am an aspiring web developer and this journey I'm currently undertaking is with Quirky30 by my side. I want to become a web developer becuase I love solving problems, and we all know that technology is fast evolving and we are dependent on it, therefore technological solutions to make our lives easier is essential... and that's where web developing actually comes into play.</p>
               </div>
               <div class="col-sm-4 text-center">
-                <i class="fas fa-info" style="font-size: 60px;"></i>
+                <i class="fas fa-info text-info" style="font-size: 60px;"></i>
                 <h4>Motivational Speaking</h4>
                 <p>I ocassionally give motivational talks, especially to the youth because I can relate to the problems/challenges they face in their everyday lives. Being able to motivate other people and give them hope gives me hope as well because I also get to share my experiences and learn through other people's experiences as well. Let us not forget that knowledge is power and power means superiority, which ultimately means dominance.</p>
               </div>
               <div class="col-sm-4 text-center">
-                <i class="fas fa-futbol" style="font-size: 60px;"></i>
+                <i class="fas fa-futbol text-info" style="font-size: 60px;"></i>
                 <h4>Football</h4>
                 <p>Football has been a part of me since the tender age of 10, from playing in the dusty streets of my home town to playing in the world renowned FNB (Soccer City) stadium. To me football is life as everything I've learned, was with a ball at my feet. It's part of my meditation as it brings me peace, and everytime I enter the field of play, all my troubles go away.</p>
               </div>
-           </div>
-       </div>
+            </div>
+         </div>
+      </div>
 
-
-</div>
-     
-     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-<div class="carousel-inner">
-  <div class="carousel-item active">
-  <img src="motiv1.jpg" height="700px;" width="1024px;" class="d-block w-100" >
-  </div>
-<div class="carousel-item">
-<img src="motiv2.jpg" height="700px;" width="1024px;" class="d-block w-100" >
-</div>
-<div class="carousel-item">
-<img src="motiv3.JPG" height="700px;" width="1024px;" class="d-block w-100" >
-</div>
-<div class="carousel-item">
-<img src="motiv4.jpg" height="700px;" width="1024px;" class="d-block w-100" >
-</div>
-</div>
-<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-<span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-<span class="carousel-control-next-icon" aria-hidden="true"></span>
-<span class="sr-only">Next</span>
-</a>
-</div>
    </section>
    <hr>
-   <section id="projects">
-     <div class="container-fluid">
+   <section class="bg-dark" id="projects">
+     <div class="container-fluid ">
        <div class="row">
-         <div class="col-sm-12 text-center">
-           <u class="text-info"><h1 class="text-info">PROJECTS</h1></u>
-         </div>
       <div class="col-sm-3">
        <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="IMAGES/SPIKER8.jpg" height="280px;" alt="Card image cap">
@@ -116,11 +81,11 @@
 </div>
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/PhY9.gif" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/nyoka.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">2nd Project</h5>
 <p class="card-text">Snakes are one of the endangered species in the world, so when you see one don't kill it.</p>
-<a href="#" class="btn btn-primary">LIKE</a>
+<a href="https://www.africansnakebiteinstitute.com/" class="btn btn-primary">EXPLORE</a>
 </div>
 </div>
 </div>
@@ -130,19 +95,19 @@
 <img class="card-img-top" src="IMAGES/home.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">3rd Project</h5>
-<p class="card-text">Investing in property will bring great returns because it's value rises the moment you buy it.</p>
-<a href="#" class="btn btn-primary">LIKE!</a>
+<p class="card-text">Investing in property will bring great returns because it's value rises the moment you buy it</p>
+<a href="https://www.eazi.com/" class="btn btn-primary">EXPLORE</a>
 </div>
 </div>
 </div>
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/legends_logo.png" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/legends_logo.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">4th Project</h5>
-<p class="card-text">Revamping and designing THE LEGENDARY BARBER logo to hook more customers.</p>
-<a href="#" class="btn btn-primary text-center">LIKE</a>
+<p class="card-text">Revamping and designing THE LEGENDARY BARBER logo to hook more customers</p>
+<a href="http://www.legendsbarbershop.co.za/" class="btn btn-primary text-center">EXPLORE</a>
 </div>
 </div>
 </div>
@@ -155,7 +120,7 @@
            <div class="card-body">
             <h5 class="card-title text-center">5th Project</h5>
            <p class="card-text">Creating awareness for another one of the endangered species in South Africa.</p>
-           <a href="#" class="btn btn-primary">LIKE</a>
+           <a href="https://www.savetherhino.org/" class="btn btn-primary">EXPLORE</a>
          </div>
      </div>
 </div>
@@ -165,7 +130,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">6th Project</h5>
 <p class="card-text">A whole new world as we tap deeper in to the way Jaguars behave in their natural habitat.</p>
-<a href="#" class="btn btn-primary">LIKE</a>
+<a href="https://www.natgeokids.com/za/discover/animals/general-animals/jaguar-facts/" class="btn btn-primary">EXPLORE</a>
 </div>
 </div>
 </div>
@@ -176,18 +141,18 @@
 <div class="card-body">
 <h5 class="card-title text-center">7th Project</h5>
 <p class="card-text">Style and performance of luxury cars that are affordable and can be maintained without hassles.</p>
-<a href="#" class="btn btn-primary">LIKE</a>
+<a href="https://www.jamesedition.com/cars" class="btn btn-primary">EXPLORE</a>
 </div>
 </div>
 </div>
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/CR7_boss.jpg" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/cr7.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">8th Project</h5>
 <p class="card-text">Looking at how Cristiano Ronaldo manages to be at the top of his game most of the time.</p>
-<a href="#" class="btn btn-primary">LIKE</a>
+<a href="https://www.juventus.com/en/teams/first-team/forwards/cristiano-ronaldo/index.php" class="btn btn-primary">EXPLORE</a>
 </div>
 </div>
 </div>
@@ -195,40 +160,37 @@
    </div>
    </section>
    <hr>
-   <section id="contact">
+   <section class="bg-dark text-light" id="contact">
        <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12 text-center">
-              <u class="text-info"><h1 class="text-info">CONTACT</h1></u>
-            </div>
-              <div class="col-md-7  text-primary">
+              <div class="col-md-7  text-info">
                  <form>
                     <div class="form-group">
                      <i class="fa fa-user"></i>
-                      <input type="text" class="form-control" placeholder="Name">
+                      <input type="text" class="form-control bg-dark text-light" placeholder="Name">
                     </div>
 
                     <div class="form-group">
                      <img src="">
-                     <i class="fa fa-envelope"></i>
-                      <input type="email" class="form-control" placeholder="Email">
+                     <i class="fa fa-envelope icon"></i>
+                      <input type="email" class="form-control bg-dark text-white" placeholder="Email">
                     </div>
 
                     <div class="form-group">
                      <i class="fa fa-tags"></i>
-                      <input type="text" class="form-control" placeholder="Subject">
+                      <input type="text" class="form-control bg-dark text-light" placeholder="Subject">
                     </div>
                     <div class="form-group">
                       <i class="fas fa-pencil-alt"></i>
-                      <textarea name="text" class="form-control" rows="2" cols="10" placeholder="message"></textarea><br>
+                      <textarea name="text" class="form-control bg-dark text-light" rows="2" cols="10" placeholder="message"></textarea><br>
                       <button type="submit" class="btn btn-info">Send</button>
                     </div>
                  </form>
               </div>
               <div class="col-md-4">
-                <i class="fa fa-map-marker-alt text-primary" style="font-size: 60px;"></i><br><p>42 Brinton St Langa Cape Town 7456</p><br>
-                <i class="fa fa-envelope text-primary" style="font-size: 60px;"></i><br><p>jabulani@quirky30.co.za</p><br>
-                <i class="fa fa-phone text-primary" style="font-size: 60px;"></i><br><p>0611015204</p><br>
+                <i class="fa fa-map-marker-alt text-info" style="font-size: 60px;"></i><br><p>42 Brinton St Langa Cape Town 7456</p><br>
+                <i class="fa fa-envelope text-info" style="font-size: 60px;"></i><br><p>jabulani@quirky30.co.za</p><br>
+                <i class="fa fa-phone text-info" style="font-size: 60px;"></i><br><p>0611015204</p><br>
               </div>
           </div>
        </div>
@@ -243,15 +205,16 @@
 
 
     </main>
+  <footer class="b-dark">
     <div class="container bg-light border border-dark">
-
 <div class="panel panel-default">
   <div class="panel-body text-center"><u><p>Copyrights Reserved@Jabulani2019</p></u></div>
 </div>
 </div>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</footer>
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+
