--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        <div class="row">
       <div class="col-sm-3">
        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="SPIKER8.jpg" height="280px;" alt="Card image cap">
+            <img class="card-img-top" src="IMAGES/SPIKER8.jpg" height="280px;" alt="Card image cap">
              <div class="card-body">
               <h5 class="card-title text-center">1st Project</h5>
              <p class="card-text">Creating my portfolio with all my infomation in a form of a website that will be live.</p>
@@ -81,7 +81,7 @@
 </div>
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="nyoka.jpg" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/nyoka.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">2nd Project</h5>
 <p class="card-text">Snakes are one of the endangered species in the world, so when you see one don't kill it.</p>
@@ -92,7 +92,7 @@
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="home.jpg" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/home.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">3rd Project</h5>
 <p class="card-text">Investing in property will bring great returns because it's value rises the moment you buy it</p>
@@ -103,7 +103,7 @@
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="legends_logo.jpg" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/legends_logo.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">4th Project</h5>
 <p class="card-text">Revamping and designing THE LEGENDARY BARBER logo to hook more customers</p>
@@ -116,7 +116,7 @@
      <div class="row">
     <div class="col-sm-3">
      <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="rhino.jpg" height="280px;" alt="Card image cap">
+          <img class="card-img-top" src="IMAGES/rhino.jpg" height="280px;" alt="Card image cap">
            <div class="card-body">
             <h5 class="card-title text-center">5th Project</h5>
            <p class="card-text">Creating awareness for another one of the endangered species in South Africa.</p>
@@ -126,7 +126,7 @@
 </div>
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="jaguar_black.jpg" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/jaguar_black.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">6th Project</h5>
 <p class="card-text">A whole new world as we tap deeper in to the way Jaguars behave in their natural habitat.</p>
@@ -137,7 +137,7 @@
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="buggatti.png" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/buggatti.png" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">7th Project</h5>
 <p class="card-text">Style and performance of luxury cars that are affordable and can be maintained without hassles.</p>
@@ -148,7 +148,7 @@
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="cr7.jpg" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="IMAGES/cr7.jpg" height="280px;" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title text-center">8th Project</h5>
 <p class="card-text">Looking at how Cristiano Ronaldo manages to be at the top of his game most of the time.</p>
