--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        <div class="row">
       <div class="col-sm-3">
        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="IMAGES/SPIKER8.jpg" height="280px;" alt="Card image cap">
+            <img class="card-img-top" src="Winter-(skier).jpg" height="280px;" alt="Card image cap">
              <div class="card-body">
               <h5 class="card-title text-center">1st Project</h5>
              <p class="card-text">Creating my portfolio with all my infomation in a form of a website that will be live.</p>
