--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
              <div class="card-body">
               <h5 class="card-title text-center">1st Project</h5>
              <p class="card-text">Creating my portfolio with all my infomation in a form of a website that will be live.</p>
-             <a href="#" class="btn btn-primary">EXPLORE</a>
+             <a href="https://jabulanimsibi.github.io/Design-1/" class="btn btn-primary">EXPLORE</a>
            </div>
        </div>
 </div>
