--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img class="card-img-top" src="design1.jpg" height="280px;" alt="Card image cap">
              <div class="card-body">
               <h5 class="card-title text-center">1st Project</h5>
-             <p class="card-text">Creating my portfolio with all my infomation in a form of a website that will be live.</p>
+             <p class="card-text">Execute a design using HTML and CSS</p>
              <a href="https://jabulanimsibi.github.io/Design-1/" class="btn btn-primary">EXPLORE</a>
            </div>
        </div>
