--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
              <div class="card-body">
               <h5 class="card-title text-center">1st Project</h5>
              <p class="card-text">Execute a design using HTML and CSS</p>
-             <a href="https://jabulanimsibi.github.io/Design-1/" class="btn btn-primary">EXPLORE</a>
+             <a href="https://jabulanimsibi.github.io/Design-1/" target="_blank" class="btn btn-primary">EXPLORE</a>
            </div>
        </div>
 </div>
