--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
        <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="design1.jpg" height="280px;" alt="Card image cap">
              <div class="card-body">
-              <h5 class="card-title text-center">1st Project</h5>
-             <p class="card-text">Execute a design using HTML and CSS</p>
+              <h5 class="card-title text-center">DUKAKEN</h5>
+             <p class="card-text">Using HTML and CSS.</p>
              <a href="https://jabulanimsibi.github.io/Design-1/" target="_blank" class="btn btn-primary">EXPLORE</a>
            </div>
        </div>
