--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
 <div class="col-sm-3">
 <div class="card" style="width: 18rem;">
-<img class="card-img-top" src="IMAGES/home.jpg" height="280px;" alt="Card image cap">
+<img class="card-img-top" src="wordpress-design-1.png" height="280px;" alt="Card image cap">
 <div class="card-body">
-<h5 class="card-title text-center">3rd Project</h5>
-<p class="card-text">Investing in property will bring great returns because it's value rises the moment you buy it</p>
+<h5 class="card-title text-center">DUKAKEN</h5>
+<p class="card-text">Using WORDPRESS</p>
 <a href="#" class="btn btn-primary">EXPLORE</a>
 </div>
 </div>
