--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">4th Project</h5>
 <p class="card-text">Revamping and designing THE LEGENDARY BARBER logo to hook more customers</p>
-<a href="#" class="btn btn-primary text-center">EXPLORE</a>
+<a href="#" class="btn btn-primary text-center">COMING SOON</a>
 </div>
 </div>
 </div>
@@ -120,7 +120,7 @@
            <div class="card-body">
             <h5 class="card-title text-center">5th Project</h5>
            <p class="card-text">Creating awareness for another one of the endangered species in South Africa.</p>
-           <a href="#" class="btn btn-primary">EXPLORE</a>
+           <a href="#" class="btn btn-primary">COMING SOON</a>
          </div>
      </div>
 </div>
@@ -130,7 +130,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">6th Project</h5>
 <p class="card-text">A whole new world as we tap deeper in to the way Jaguars behave in their natural habitat.</p>
-<a href="#" class="btn btn-primary">EXPLORE</a>
+<a href="#" class="btn btn-primary">COMING SOON</a>
 </div>
 </div>
 </div>
@@ -141,7 +141,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">7th Project</h5>
 <p class="card-text">Style and performance of luxury cars that are affordable and can be maintained without hassles.</p>
-<a href="#" class="btn btn-primary">EXPLORE</a>
+<a href="#" class="btn btn-primary">COMING SOON</a>
 </div>
 </div>
 </div>
@@ -152,7 +152,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">8th Project</h5>
 <p class="card-text">Looking at how Cristiano Ronaldo manages to be at the top of his game most of the time.</p>
-<a href="#" class="btn btn-primary">EXPLORE</a>
+<a href="#" class="btn btn-primary">COMING SOON</a>
 </div>
 </div>
 </div>
