--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="card-body">
 <h5 class="card-title text-center">SHARE WITH LOVE</h5>
 <p class="card-text">Using Wordpress.</p>
-<a href="https://jabulanimsibi.github.io/Design-1/" class="btn btn-primary">EXPLORE</a>
+<a href="#" class="btn btn-primary">EXPLORE</a>
 </div>
 </div>
 </div>
